--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name="com.facebook.LoginActivity" >
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
